# math

./: .gitignore  CMakeLists.txt
include/: Point.cc  Point.h  point.cc  point.h
src/: Point.cc  point.cc
test/: main.cpp
